--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h3>welcome</h3>
     <p>
-      <a href="">Register or login</a>
+      <a href="https://shreshthkirtikadeesaumy.auth.ap-northeast-1.amazoncognito.com/login?client_id=ljs3s1ma6m76k3vi9mh8c936&response_type=code&scope=email+openid&redirect_uri=https://sj1705.github.io/midsem/logged_in">Register or login</a>
     </p>
   </body>
 </html>
