--- a/logged_out.html
+++ b/logged_out.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h3>You are logged out!</h3>
-    <a href="">Log back in!</a>
+    <a href="https://shreshthkirtikadeesaumy.auth.ap-northeast-1.amazoncognito.com/login?client_id=ljs3s1ma6m76k3vi9mh8c936&response_type=code&scope=email+openid&redirect_uri=https://sj1705.github.io/midsem/logged_in">Log back in!</a>
   </body>
 </html>
