--- a/logged_in.html
+++ b/logged_in.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h3>Congratulations! You are logged in !</h3>
-    <a href="">Log out</a>
+    <a href="https://shreshthkirtikadeesaumy.auth.ap-northeast-1.amazoncognito.com/logout?client_id=ljs3s1ma6m76k3vi9mh8c936&logout_uri=https://sj1705.github.io/midsem/logged_out">Log out</a>
   </body>
 </html>
